# brainwave

./: .gitignore  GLM_INTEGRATION_SUMMARY.md  commercial.md  config.yml  config_loader.py  glm_integration.md  h100_architecture.md  ios_keyboard_plan.md  llm_processor.py  llm_usage_analysis.md  openai_realtime_client.py  prompts.py  pyproject.toml  realtime_server.py  start_brainwave.bat  start_brainwave.ps1  start_brainwave_hidden.vbs  stop_brainwave.bat  whisper_deployment.md
database/: utils.py
static/: main.js  realtime.html  style.css
